<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">i\'m office</string>
    
    
    <string name="loading">正在加载...</string>
    
    <!-- TitleBar：begin -->
    <string name="back">返回</string>
<!--     <string name="copy">复制</string> -->
    <string name="copy"></string>
    <string name="refresh">刷新</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="card">名片</string>
    
    
    <string name="my_profil_setting">个人设置</string>
    <string name="online_state_setting">在线状态设置</string>
    <string name="detail">联系人详情</string>
    <string name="dialgue_title">imo对话</string>
    <string name="dialgue_record">对话记录（a/b）</string>
    
    <string name="local_db_save_failed">本地数据保存不成功</string>
    <string name="net_connected_failed">网络连接不成功</string>
    <string name="relogin">重新登录</string>
    <!--  TitleBar：end -->

    <!-- 登录部分:begin -->
    <string name="option1">记住密码</string>
    <string name="option2">直接登录</string>
    <string name="option3">接收群/多人信息</string>
    <string name="option4">后台保持在线</string>
    <!-- 登录部分:end -->

    <string name="search_hint">查找联系人(支持简拼)</string><!-- 、群组、分支 -->
    <!-- 支持拼音）... -->


    <!-- 菜单显示：begin -->
    <string name="dialogue">对话</string>
    <string name="organize">组织架构</string>
    <string name="contact">联系人</string>
    <string name="group">群组</string>
    <!-- 菜单显示：end -->
    
    
    <!-- 通知：begin -->
    <string name="notice_mobile_imo">手机imo</string>
    <string name="noticebar_on_going">i\'m office正在运行</string>
    <string name="notice_new_news">条未读新消息</string>
    <string name="notice_receive_news">收到</string>
    <!-- 通知：end -->
    
    
    <!-- 网络通信部分：begin -->
    <string name="notifypacket_timeout">网络连接超时</string>
    <string name="notifypacket_failed">数据请求失败</string>
    <string name="notifypacket_force_exit">强制下线</string>
    <!-- 网络通信部分：end -->
    
    <!--  个人设置：begin -->
     <string name="edit_work_sign">编辑工作签名</string>
     <string name="my_profile">我的资料</string>
     <string name="system_setting">系统设置</string>
    <!--  个人设置：end -->
    
   <string name="work_sign_max_tip">工作签名字数最多为140个字</string>
    
    <!--  名片：begin -->
     <string name="company_name">公司：</string>
     <string name="address">地址：</string>
     <string name="tel">电话：</string>
     <string name="mobilephone">手机：</string>
     <string name="fax">传真：</string>
     <string name="account">imo：</string>
     <string name="user_account">imo：</string>
     <string name="email">E-Mail：</string>
    <!--  名片：end -->
    
    
    <!--  系统设置：begin -->
     <string name="notice_setting">通知设置</string>
     <string name="sound_prompt">声音提示</string>
     <string name="vibrate_prompt">震动提示</string>
     <string name="state_setting">在线状态设置</string>
     <string name="new_features">新功能介绍</string>
     <string name="app_update">软件升级</string>
     <string name="about_app">关于imo</string>
    <!--  系统设置：end -->
    
    <!--  通知设置：begin -->
     <string name="contact_msg_push">联系人消息推送</string>
     <string name="notice_receiver_scope">通知接受时段</string>
     <string name="default_scope">0:00-23:00</string>
    <!--  通知设置：end -->
    
    
    <!--  在线状态设置：begin -->
     <string name="background_keep_online">后台保持在线</string>
     <string name="background_keep_online_scope">后台保持在线时段</string>
    <!--  在线状态设置：end -->
    
    
    <!--  关于界面：begin -->
     <string name="mobile_version">i\'m office 手机版</string>
     <string name="mobile_version_v">v1.0</string>
     <string name="version_info">版本</string>
     <string name="copyright_info">Copyright(c)2007-2012\nimo All Rights Reserved.</string>
     <string name="copyright_info1">Copyright(c)2007-2012 imo All Rights Reserved.</string>
     <string name="company_info">易睦网络·版权所有</string><!--互联网办公室 imo运营中心  -->
     <string name="customer_service_tel">客服电话：</string>
     <string name="customer_service_imo">客服imo：</string>
     <string name="customer_url">官方网址：</string>
     <string name="imo_url">www.imoffice.com</string>
     <string name="imo_kefu">service@510086</string>
     <string name="imo_tel">800-820-6575</string>
    <!--  关于界面：end -->
    
    <!--  对话：begin -->
     <string name="begin_dialogue">开始对话</string>
     <string name="copy_namecard">复制名片</string>
     <string name="no_dialogue_record">暂时没有对话信息</string>
    <!--  对话：end -->
    
    <!--  联系人：begin -->
     <string name="uncategorized_inner_contact">未归类的内部联系人</string>
     <string name="uncategorized_outer_contact">未归类的外部联系人</string>
    <!--  联系人：end -->
    
    <!--  员工详细信息：begin -->
      <string name="default_sign">编辑工作签名(工作状态、心得等...)</string>
      <string name="work_sign">工作签名:</string>
      <string name="see_ta_card">查看ta的名片</string>
      <string name="see_dialogue_record">查看对话历史记录</string>
    <!--  员工详细信息：end -->
    
    <!--  WorkSign：begin -->
     <string name="sign_empty">工作签名不能为空</string>
    <!--  WorkSign：end -->
    
    <!-- State：begin -->
     <string name="online_state">联机状态</string>
     <string name="logout_account">注销帐号</string>
     <string name="has_not_login">未登录</string>
    <!-- State：end -->
    
    
    <!-- RecentContact：begin -->
     <string name="today">今天</string>
     <string name="yesterday">昨天</string>
     <string name="close">关闭</string>
     <string name="confirm_del_recent_contect">删除最近联系人？</string>
    <!-- RecentContact：end -->
    
    
    <!-- Group：begin -->
    <string name="group_info">我们正在建设中</string>
    <!-- Group：end -->
    
    <!-- Update：begin -->
    <string name="app_update_loading">正在检查更新...</string>
    <string name="app_no_update">当前为最新版本</string>
    <string name="app_comfirm_update">您确认更新？</string>
    
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <!-- Update：end -->    
    

    <string name="warn">警告</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_del_chat_record">是否确认删除聊天记录？</string>
    <string name="no_sdcard_tip">没有SDCard,无法更新。</string>
    
    
    
    
   
    <string name="mystate">我的状态</string>
    <string name="online">在线</string>
    <string name="hide">隐身</string>
    <string name="busy">忙碌</string>
    <string name="offline">离线</string>
    <string name="login">登录</string>
    <string name="nonelogin">未登录</string>
    <string name="logoff">注销登录</string>
    
    <string name="about_activity_email"><u>service@510086</u></string>
    <string name="about_activity_web"><u>www.imoffice.com</u></string>
    
    <string name="networkinvalid">无可用的网络连接</string>
    <string name="logoutError">注销失败</string>
    <string name="loadingError">网络中断，请重新登录。</string>
    
    <string name="register_account"><u>注册组织号码</u></string>
    
    

</resources>