<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background_default"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dip"
        android:paddingRight="8dip" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tv_mobile_version"
                android:text="@string/mobile_version"
                style="@style/imo_about_style"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_mobile_version_v"
                style="@style/imo_about_style"
                android:layout_alignBottom="@id/tv_mobile_version"
                android:layout_toRightOf="@id/tv_mobile_version"
                android:paddingLeft="5dip"
                android:text="@string/mobile_version_v"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_version_info"
            android:text=""
            style="@style/imo_about_style"
            />

        <TextView
            android:id="@+id/tv_copyright_info"
            android:text="@string/copyright_info"
            style="@style/imo_about_style"
            />

        <TextView
            android:id="@+id/tv_company_info"
            android:text="@string/company_info"
            style="@style/imo_about_style"
            />

        <!-- 客服电话 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip" >
            <TextView
                 android:id="@+id/tv_customer_service_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imo_url"
                android:autoLink="all"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        
        

        
        
    </LinearLayout>

</LinearLayout>