<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background_default"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/middle_card" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- company_name -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                >

                <TextView
                    style="@style/card_item_left"
                    android:text="@string/company_name" />

                <TextView
                    android:id="@+id/tv_company_name"
                    style="@style/card_item_default"
                    android:text="" />
            </LinearLayout>

            <include layout="@layout/line" />

            <!-- address -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/card_item_left"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/card_item_default"
                    android:text="" />
            </LinearLayout>

            <include layout="@layout/line" />

            <!-- address -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/card_item_left"
                    android:text="@string/tel" />

                <TextView
                    android:id="@+id/tv_tel"
                    style="@style/card_item_default"
                    android:autoLink="all"
                    android:text="" />
            </LinearLayout>

            <include layout="@layout/line" />

            <!-- address -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/card_item_left"
                    android:text="@string/mobilephone" />

                <TextView
                    android:id="@+id/tv_mobilephone"
                    style="@style/card_item_default"
                    android:autoLink="all"
                    android:text="" />
            </LinearLayout>

            <include layout="@layout/line" />

            <!-- fax -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/card_item_left"
                    android:text="@string/fax" />

                <TextView
                    android:id="@+id/tv_fax"
                    style="@style/card_item_default"
                    android:text="" />
            </LinearLayout>

            <include layout="@layout/line" />

            <!-- fax -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/card_item_left"
                    android:text="@string/account" />

                <TextView
                    android:id="@+id/tv_user_account"
                    style="@style/card_item_default"
                    android:text="" />
            </LinearLayout>

            <include layout="@layout/line" />

            <!-- fax -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/card_item_left"
                    android:paddingLeft="15dip"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/card_item_default"
                    android:autoLink="all"
                    android:text="" />
            </LinearLayout>
            
            <!-- 复制名片button -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="110px" 
                android:gravity="center|right"
                >
                
                <!-- <Button
                    android:id="@+id/copynamecard_btn"
                    android:layout_height="@dimen/copynamecard_height"
                    android:layout_width="@dimen/copynamecard_width"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/copynamecard_background"
                   />  -->
                    <Button
		            android:id="@+id/copynamecard_btn"
		            android:layout_width="@dimen/begin_dialog_btn_width"
            		android:layout_height="@dimen/begin_dialog_btn_height"
		            android:layout_marginRight="15dip"
		            android:layout_marginLeft="10dip"
		            android:background="@drawable/copy_name_card_bg"
		            android:text="@string/copy_namecard"
		            android:textColor="@color/black"/>
            </LinearLayout> 
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>