<?xml version="1.0" encoding="utf-8"?>
<!-- 带按钮 文版的标题栏 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/default_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4.6" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1.3" 
        android:gravity="left">

        <Button
            android:id="@+id/btn_left"
            style="@style/titlebar_btn_style"
            android:layout_marginLeft="@dimen/titlebar_btn_marginleft"
            android:background="@drawable/titlebar_btn_bg"
            android:text="@string/cancel" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/tv_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:singleLine="true"
            android:text="@string/detail"
            android:textColor="#163b71"
            android:textSize="@dimen/titlebar_center_fontsize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1.3" 
        android:gravity="right">

        <Button
            android:id="@+id/btn_right"
            style="@style/titlebar_btn_style"
            android:layout_marginRight="@dimen/titlebar_btn_marginleft"
            android:text="@string/edit" />
    </LinearLayout>

</LinearLayout>